nueva web con otra idea

--- a/index.html
+++ b/index.html
@@ -3,57 +3,42 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>MicroDSI · Identificación de Procesos</title>
+  <title>FitForge · Entrenador Personal</title>
   <link rel="stylesheet" href="assets/styles.css"/>
 </head>
 <body>
   <header class="topbar">
     <div class="row">
       <div class="brand">
-        <b>MicroDSI</b>
-        <span>M2-S10 · Identificación de Procesos</span>
+        <b>FitForge</b>
+        <span>Planificador de Entrenamientos</span>
       </div>
       <nav class="nav">
-        <a class="btn" href="feed.html">Feed</a>
-        <a class="btn" href="pista.htm">Pistas</a>
-        <a class="btn primary" href="lab.html">Laboratorio</a>
+        <a class="btn" href="feed.html">Ejercicios</a>
+        <a class="btn" href="pista.htm">Evaluación</a>
+        <a class="btn primary" href="lab.html">Crear Rutina</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
     <section class="hero">
-      <h1>Identificación y Priorización de Procesos Empresariales</h1>
+      <h1>Forja tu mejor versión 🏋️‍♂️</h1>
       <p>
-        Metodología estructurada para el análisis operativo: inventario de capacidades, evaluación mediante matriz de impacto/esfuerzo/riesgo y definición de fronteras a través del modelo SIPOC.
+        Bienvenido a FitForge. Selecciona tu disciplina, aprende la técnica correcta en el feed, evalúa tu nivel físico actual y diseña una rutina semanal perfecta lista para llevar al gimnasio.
       </p>
 
       <div class="chips">
-        <span class="chip">⚡ Análisis L1/L2</span>
-        <span class="chip">🧭 Matriz de Priorización</span>
-        <span class="chip">🧾 Modelo SIPOC</span>
-        <span class="chip">⬇️ Exportación .md</span>
-      </div>
-
-      <div class="kpi">
-        <div class="box">
-          <b>Objetivo Principal</b>
-          <span>Seleccionar 1 proceso candidato respaldado por métricas.</span>
-        </div>
-        <div class="box">
-          <b>Entregable</b>
-          <span>Documento Markdown (.md) estructurado para revisión.</span>
-        </div>
-        <div class="box">
-          <b>Tiempo Estimado</b>
-          <span>40 minutos en total.</span>
-        </div>
+        <span class="chip">💪 Fuerza</span>
+        <span class="chip">🏃 Cardio</span>
+        <span class="chip">🧘 Yoga</span>
+        <span class="chip">⬇️ Exportar Rutina</span>
       </div>
 
       <div class="actions">
-        <a class="btn primary" href="feed.html">Iniciar Análisis (Feed)</a>
-        <a class="btn" href="pista.htm">Ver Caso Guiado (Pistas)</a>
-        <a class="btn" href="lab.html">Ir al Laboratorio</a>
+        <a class="btn primary" href="feed.html">Ver Ejercicios</a>
+        <a class="btn" href="pista.htm">Hacer Evaluación</a>
+        <a class="btn" href="lab.html">Diseñar Rutina</a>
       </div>
     </section>
 
@@ -61,21 +46,11 @@
 
     <section class="grid2">
       <div class="panel">
-        <h3>Instrucciones de la Actividad</h3>
+        <h3>¿Cómo funciona?</h3>
         <p>
-          1. <b>Feed:</b> Revisa los conceptos clave y selecciona tu track de trabajo (ITSM, HR o Procurement). <br/>
-          2. <b>Pistas:</b> Analiza el caso de uso y define los criterios operativos. <br/>
-          3. <b>Laboratorio:</b> Registra tu inventario, calcula el score de priorización y diseña el SIPOC. Genera el archivo para la entrega.
-        </p>
-      </div>
-
-      <div class="panel">
-        <h3>Criterios de Calidad</h3>
-        <p>
-          • Definición L1: <b>Verbo de acción + Objeto específico</b>. <br/>
-          • Priorización: Requiere justificación numérica (Volumen, AHT, % Retrabajo). <br/>
-          • SIPOC: Debe contener entre <b>4 y 6 pasos</b>. <br/>
-          • Riesgo: Identificar obligatoriamente restricciones de PII, auditoría o criticidad.
+          1. <b>Ejercicios (Feed):</b> Elige tu objetivo (Fuerza, Cardio o Yoga) y lee los tips de técnica.<br/>
+          2. <b>Evaluación (Pistas):</b> Responde a las preguntas sobre tu estado físico.<br/>
+          3. <b>Creador (Lab):</b> Añade tus series, repeticiones y descansos, y descarga tu tabla de entrenamiento.
         </p>
       </div>
     </section>
