--- a/feed.html
+++ b/feed.html
@@ -3,30 +3,30 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>MicroDSI · Feed</title>
+  <title>FitForge · Ejercicios</title>
   <link rel="stylesheet" href="assets/styles.css"/>
 </head>
 <body>
   <header class="topbar">
     <div class="row">
       <div class="brand">
-        <b>MicroDSI</b>
-        <span>Feed · Micro-lecciones</span>
+        <b>FitForge</b>
+        <span>Feed de Ejercicios</span>
       </div>
 
       <nav class="nav">
         <div class="btn track-selector" style="padding:8px 10px; border-radius:8px;">
-          <small style="margin-right:8px; color:var(--muted);">Track:</small>
+          <small style="margin-right:8px; color:var(--muted);">Objetivo:</small>
           <select id="trackSel" style="border:none; background:transparent; color:var(--text); outline:none; font-weight:600; cursor:pointer;">
-            <option value="itsm">ITSM Triage</option>
-            <option value="hr">HR</option>
-            <option value="proc">Procurement</option>
+            <option value="fuerza">Fuerza (Pesas)</option>
+            <option value="cardio">Cardio y Resistencia</option>
+            <option value="yoga">Yoga y Movilidad</option>
           </select>
         </div>
 
         <a class="btn" href="index.html">Inicio</a>
-        <a class="btn" href="pista.htm">Pistas</a>
-        <a class="btn primary" href="lab.html">Laboratorio</a>
+        <a class="btn" href="pista.htm">Evaluación</a>
+        <a class="btn primary" href="lab.html">Crear Rutina</a>
       </nav>
     </div>
   </header>
